# routing_ego

./: .gitignore  CLAUDE.md  README.md  algorithm_description.md  function_intro.md  interface_offline.md  pyproject.toml  req.txt  run.sh  spec_design.md
.claude/: settings.local.json
data3in1/: planned_route.json
docs/: clothoid_calibration.md  ego_route_llh_format.md  planned_route_format.md  project_route_function.md
docs/specs/: parking_route_projection_all_checked_20260702213925.md  parking_route_projection_stage1_20260702212941.md
example_output_format/: docs_ANNOTATION_PLATFORM_REIMPLEMENTATION_SPEC.md  frame_000000.json  frame_000001.json
src/parking_proj/: clothoid.py  generate.py  generate_real.py  geo.py  geometry.py  grade.py  offline_processing_routing_projection.py  osm.py  project_route.py  projection.py  realdata.py  route.py  scenarios.py  simulate.py  smoothing.py  transform.py  viewer_server.py
tests/: test_acceptance.py  test_clothoid.py  test_follow_path.py  test_generate.py  test_generate_follow_path.py  test_generate_real.py  test_geo.py  test_geo_gcj.py  test_geometry.py  test_offline_projection.py  test_osm_fetch.py  test_osm_math.py  test_project_route.py  test_projection.py  test_realdata.py  test_route.py  test_scenarios.py  test_search_window.py  test_simulate.py  test_smoothing.py  test_transform.py
tests/e2e/: parity_harness.html  test_parity_py_js.py  test_preprocessed_e2e.py  test_viewer_e2e.py
tools/: calibrate_clothoid.py
viewer/: index.html  project_route.js  viewer.css  viewer.js
(+28 files in other folders)
